# sirqle

./: .gitignore  .null-ls_178377_README.md  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: bump.yml  codeql.yml
docs/: gen_ref_pages.py  index.md  reference.md
src/sirqle/: __init__.py  config.py  query.py
tests/: test_all.py  test_create.py  test_insert.py  test_query.py
